apps/lim/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lim-ingress
  namespace: fortify
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS

spec:
  ingressClassName: public
  tls:
  - hosts:
    - lim.fortifydemo.com
    secretName: tls

  rules:
  - host: lim.fortifydemo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lim
            port:
              number: 37562
